# AI-Feynman

./: .gitmodules  CMakeLists.txt  README.md  TODO  setup.py
doc/: report.tex
examples/: example.py
feynman/: S_brute_force.py  S_brute_force_number.py  symbolic_regress1.f90  symbolic_regress1.py  symbolic_regress2.f90  symbolic_regress2.py  symbolic_regress3.f90  symbolic_regress3.py  symbolic_regress_mdl2.f  symbolic_regress_mdl3.f  tools.f90
feynman/_feynman/: CMakeLists.txt  symbolic_regress1.f90  symbolic_regress2.f90  symbolic_regress3.f90
feynman/_feynman/src/: _feynman.cpp  f3.cpp  f3.f90  load.f90  multiloop.cpp  multiloop.f90  symbolic_regress1.f90  symbolic_regress2.f90  symbolic_regress3.f90
